JDiskManager -  [partitionTableType, mbr , gpt]